# IpsosTimeTracking

./: .env.example  .gitignore  README.md  encode_password.py  itime.py  itime_test.py  jira_account_mapping.example.json  jira_account_update.py  jira_itime_task_mapping.json  jira_sync.py  pyproject.toml  requirements.txt  sync.py  toggl.py
