[tool.poetry]
name = "time-tracking"
version = "0.1.0"
description = ""
authors = ["Jan Bednář <honzaxp01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jira = "^3.8.0"
beautifulsoup4 = "^4.12.3"
click = "^7.1.2"
enquiries = "^0.2.0"
pendulum = "^3.0.0"
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0.post0"
html5lib = "^1.1"
requests-ntlm = "^1.3.0"
aiohttp = "^3.12.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
